# PCL

Complete Segmentation Pipeline/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
Distance_Threshholding+Outlier Removal/: Makefile  planar_segmentation  preprocessing  preprocessing.cpp  run.sh
Segmentation_Pipeline/: CMakeCache.txt  Makefile  cmake_install.cmake  planar_segmentation  planar_segmentation.cpp  planar_segmentation.cpp~  run.sh
